--- a/.gitattributes
+++ b/.gitattributes
@@ -84,3 +84,5 @@
 *.gz filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
 *.tar filter=lfs diff=lfs merge=lfs -text
+
+*.css  text eol=lf
